tests/ui/traits/const-traits/cross-crate.stocknc.stderr
error: cannot call conditionally-const method `<cross_crate::NonConst as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:19:5
   |
LL |     NonConst.func();
   |     ^^^^^^^^^^^^^^^

error: cannot call conditionally-const method `<cross_crate::Const as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:22:5
   |
LL |     Const.func();
   |     ^^^^^^^^^^^^

error: aborting due to 2 previous errors

